# CPUSTACK-SUB-NODE-FIRST-EDITON

./: .gitignore  CPUSTACK-项目规划方案.md  README.md  阶段5-性能优化文档.md  阶段5-测试报告.md
cpustack/backend/: .dockerignore  Dockerfile  alembic.ini  check_db.py  diag_adopt.py  init_db.py  pyproject.toml  register_model.py  start.bat  test_adopt_flow.py  test_inference.py  test_stage2_rpc.py  test_stage3.py  test_stage4.py  test_stage4_output.txt  test_stage5.py  verify_adopt.py
cpustack/backend/alembic/: env.py
cpustack/backend/alembic/versions/: a3f5c2e8b901_add_distributed_config.py  b7e9d1f4a302_add_user_role_for_rbac.py  c477861f16be_initial_schema.py
cpustack/backend/cpustack/: __init__.py  benchmark.py  bus.py  cli.py  config.py  db.py
cpustack/backend/cpustack/catalog/: __init__.py  model_catalog.yaml  service.py
cpustack/backend/cpustack/detector/: __init__.py  collector.py  cpu_detector.py  instruction_set.py  memory_detector.py
cpustack/backend/cpustack/schemas/: common.py  knowledge.py  models.py  tokens.py  users.py  workers.py
cpustack/backend/cpustack/server/: __init__.py  app.py  auth.py  discovery.py  init_data.py  knowledge_service.py  metrics.py  token_service.py
cpustack/backend/cpustack/server/controllers/: __init__.py  base.py  instance_controller.py  model_controller.py  worker_controller.py
cpustack/backend/cpustack/server/gateway/: __init__.py  (+1 more)
cpustack/backend/cpustack/worker/: __init__.py  discovery_listener.py  downloader.py  serve_manager.py  worker.py  worker_http.py  worker_manager.py
cpustack/backend/data/ui/: index.html
(+64 files in other folders)
